--- a/stories/button.css
+++ b/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   background-color: #1ea7fd;
-  color: white;
+  color: black;
 }
 .storybook-button--secondary {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
